# wjs-utils-project

./: .gitignore  .gitlab-ci.yml  README.md  setup.cfg
wjs_mgmt_cmds/: apps.py
wjs_mgmt_cmds/management/commands/: _utils.py  create_users.py  import_all_users_from_journal.py  import_user_from_wjapp.py  import_users_from_wjapp.py  set_country.py
wjs_mgmt_cmds/pytyp/: Readme.md  affiliationSplitter.py  country.json  tests.py  utils.py
