[metadata]
name = wjs-mgmt-cmds
version = 0.2.5
description = Management commands for WJS
long_description = file: README.md
url = https://medialab.sissa.it/
author = Matteo
author_email = gamboz@medialab.sissa.it
license = AGPL
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: AGPL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 1.11
    pylatexenc
